# fashionverse_microsservice

./: .gitignore  README.md  docker-compose.yml
frontend_vue/: Dockerfile  nginx.conf  package-lock.json  package.json
service_orders/: pyproject.toml  requirements.txt
service_orders/src/orders/: urls.py
service_orders/src/service_orders/: asgi.py  settings.py  urls.py  wsgi.py
service_products/: Dockerfile  pyproject.toml  requirements.txt
service_products/src/: main.py
service_users/: Dockerfile  pyproject.toml  requirements.txt
service_users/src/: manage.py
service_users/src/accounts/: users.py
service_users/src/service_users/: asgi.py  settings.py  urls.py  wsgi.py
