[project]
name = "service-products"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "sqlmodel>=0.0.24",
    "zeconfig>=0.1.4",
]
